@@ -74,8 +74,6 @@ public class TestDOM extends TestCase {
 	 *************************************************************************/
 	
 	public static void testDOMFrysk() {
-	    if (brokenXXX (3418))
-		return;
 
 		pc = new BigInteger("25");
 		dom.setPC(pc);
@@ -107,8 +105,7 @@ public class TestDOM extends TestCase {
 	 * 
 	 *************************************************************************/
 	public static void testDOMImage() {
-	    if (brokenXXX (3417))
-		return;
+
 		DOMImage testDOMImage = dom.getImage("test_image_2");
 		assertEquals("testing DOMImage.getName()", 
 				testDOMImage.getName(), "test_image_2");
@@ -236,8 +233,6 @@ public class TestDOM extends TestCase {
 	 * test the DOMSource class methods
 	 *************************************************************************/
 	public static void testDOMsource() {
-	    if (brokenXXX (3417))
-		return;
 
 		final DOMImage testDOMImage = dom.getImage("test_image_2");
 		final DOMSource testDOMSource = testDOMImage.getSource("test_source2");
@@ -257,7 +252,8 @@ public class TestDOM extends TestCase {
 		
 		assertEquals("testing DOMSource.setFilePath()", testDOMSource.getFilePath(),
 				"/opt/share/java");
-
+		
+        // Add the lines to the source element
 		long no_bytes = 4;
 		long pc = 25842;
 		for (int ctr = 0; ctr < main_prog.length; ctr++) {
@@ -266,6 +262,7 @@ public class TestDOM extends TestCase {
 			pc += no_bytes;
 		}
 
+        // Now retrieve the lines and see if they are equal
 		Iterator line_iter = testDOMSource.getLines();
 		int line_ctr = 0;
 		while (line_iter.hasNext()) {
@@ -283,14 +280,16 @@ public class TestDOM extends TestCase {
 		
 		assertEquals("testing DOMSource.getLine()", 
 				testDOMLine.getElement().getText(), main_prog[1]);
+        
+        assertEquals("testing DOMSource.getIncludes()", testDOMSource.getIncludes(),
+                     "/home/testing,/home/testing2");
 	}
 
 	/**************************************************************************
 	 * Test the DOMLine class
 	 *************************************************************************/
 	public static void testDOMLine() {
-	    if (brokenXXX (3417))
-		return;
+
 		final int line_no = 2;
 		final DOMImage testDOMImage = dom.getImage("test_image_2");
 		final DOMSource testDOMSource = testDOMImage
@@ -390,8 +389,6 @@ public class TestDOM extends TestCase {
 	 **************************************************************************/
 	
 	public static void testDOMInlineInstance() {
-	    if (brokenXXX (3417))
-		return;
 		
 		final String inst = "do_something";
 		final int line_no = 2;
